catkin_ws/logs/backend/build.make.024.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘void readImage(SLAM::Frame, int)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:118:2: error: ‘Mat’ was not declared in this scope
  Mat img1 = imread(imgName, CV_LOAD_IMAGE_GRAYSCALE);
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:118:2: note: suggested alternative:
In file included from /opt/opencv3/include/opencv2/core.hpp:59:0,
                 from /opt/opencv3/include/opencv2/highgui.hpp:46,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:10:
/opt/opencv3/include/opencv2/core/mat.hpp:730:18: note:   ‘cv::Mat’
 class CV_EXPORTS Mat
                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:118:6: error: expected ‘;’ before ‘img1’
  Mat img1 = imread(imgName, CV_LOAD_IMAGE_GRAYSCALE);
      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:120:6: error: expected ‘;’ before ‘map1’
  Mat map1 = imread(imgName, CV_LOAD_IMAGE_ANYCOLOR | CV_LOAD_IMAGE_ANYDEPTH);
      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:122:2: error: ‘img1’ was not declared in this scope
  img1.copyTo(*gray_ptr);
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:123:2: error: ‘map1’ was not declared in this scope
  map1.copyTo(*dep_ptr);
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:129:17: error: expected primary-expression before ‘;’ token
   cout << string; 
                 ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
